...
                IconButton(
                    onClick = {
                        onClear()
                        focusManager.clearFocus()
                    },
                    modifier = Modifier
                        .testTag("ClearButton")
                ) {
                    Icon(
                        Icons.Filled.Cancel,
                        contentDescription = "Limpiar filtro",
                    )
                }
...
        ),
        keyboardActions = KeyboardActions(
            onDone = { focusManager.clearFocus() },
        ),
        modifier = modifier
            .focusRequester(focusRequester)
            .testTag(testTag ?: "SearchTextField")
    )
}

