...
                    albumesResponse.data
                )

                Column(
                    modifier = Modifier
                        .weight(1f)
                        .testTag("AlbumesSuccessScreen")
                ) {
                    Spacer(modifier = Modifier.height(12.dp))
                    SearchField(
                        value = albumesUiState.albumSearchTerm,
                        onChange = {
                            viewModel.setAlbumSearchTerm(it)
...
