...
                    collectorsResponse.data
                )

                Column(
                    modifier = Modifier
                        .weight(1f)
                        .testTag("CollectorsSuccessScreen")
                ) {
                    Spacer(modifier = Modifier.height(12.dp))
                    SearchField(
                        value = collectorsUiState.collectorSearchTerm,
                        onChange = {
                            viewModel.setCollectorSearchTerm(it)
...
