...
                    performersResponse.data
                )

                Column(
                    modifier = Modifier
                        .weight(1f)
                        .testTag("PerformersSuccessScreen")
                ) {
                    Spacer(modifier = Modifier.height(12.dp))
                    SearchField(
                        value = performersUiState.performerSearchTerm,
                        onChange = {
                            viewModel.setPerformerSearchTerm(it)
...
